@@ -12,8 +12,12 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.anyString;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class BrandServiceTest {
@@ -77,7 +81,7 @@ class BrandServiceTest {
     void findBrandsByPhrase_WhenPhraseHasTwoOrMoreCharacters_UsesRepository() {
         // given
         String phrase = "au";
-        List<String> filteredBrands = Arrays.asList("Audi");
+        List<String> filteredBrands = List.of("Audi");
         when(carDetailsRepository.findBrandsByPhrase(phrase)).thenReturn(filteredBrands);
 
         // when
